feat: editing workflow
* reorganize chirp templates
